--- a/CUHK-beamer-main/CUHK-test.tex
+++ b/CUHK-beamer-main/CUHK-test.tex
@@ -96,7 +96,7 @@ style=apa]{biblatex}
         \begin{equation}
             H(x)=-\sum\limits_i^Np(x_i)\log p(x_i).
         \end{equation}
-        This is an inline equation: $H(x)=-\sum\limits_i^Np(x_i)\log p(x_i)$。
+        This is an inline equation: $H(x)=-\sum\limits_i^Np(x_i)\log p(x_i)$
     \end{frame}
 
     \section{References}
